[package]
name = "tokio-bench"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "hello-timeout"
path = "src/hello_timeout.rs"
